--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.22.1",
     "@tanstack/react-query": "^5.62.3",
+    "@tanstack/react-query-devtools": "^5.62.3",
     "antd": "^5.22.3",
     "axios": "^1.7.9",
     "eslint-config-airbnb": "^19.0.4",
