--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "next": "15.0.3",
     "prettier": "^3.4.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
